# claude-code-agents

./: .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adapters/claude/: __init__.py
adapters/langgraph/: __init__.py
agents/_templates/: agent-template.yaml
agents/data/: data-engineer.yaml
agents/engineering/: backend-architect.yaml  security-auditor.yaml  test-automator.yaml
agents/ops/: incident-responder.yaml
agents/product/: business-analyst.yaml  docs-architect.yaml
docs/: OVERVIEW.md  SECURITY.md  STYLEGUIDE.md
recipes/feature-dev/: recipe.yaml
recipes/incident-response/: recipe.yaml
recipes/perf-optimization/: recipe.yaml
schemas/: agent-spec-v1.json  recipe-spec-v1.json
scripts/: cli.py  renderer.py  validator.py
templates/: claude_subagent.md.jinja  langgraph_agent.py.jinja
tests/: test_adapters.py  test_cli.py  test_validation.py
